Frontend Improvements & Testing using jacoco